--- a/.github/workflows/test-action-workflow.yml
+++ b/.github/workflows/test-action-workflow.yml
@@ -11,6 +11,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Debug Action
         uses: ./
         with:
