--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/plugin-retry": "^6.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
