--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,12 +1,13 @@
 name: Lint Code Base
 
 on:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - main
+  # push:
+  #   branches:
+  #     - main
 
 permissions:
   contents: read
