--- a/.github/workflows/test-action-workflow.yml
+++ b/.github/workflows/test-action-workflow.yml
@@ -3,9 +3,6 @@ name: Debug Action
 on:
   workflow_dispatch:
     inputs:
-      github_token:
-        description: 'GitHub Token'
-        required: true
       pr_filter:
         description: 'Filter PRs'
         required: true
@@ -30,7 +27,7 @@ jobs:
       - name: Debug Action
         uses: ./
         with:
-          github_token: ${{ github.event.inputs.github_token || secrets.BOT_TOKEN }}
+          github_token: ${{ secrets.BOT_TOKEN }}
           pr_filter: ${{ github.event.inputs.pr_filter || 'all' }}
           pr_label: 'autoupdate'
           pr_ready_state: 'all'
