--- a/.github/workflows/test-comment.yml
+++ b/.github/workflows/test-comment.yml
@@ -14,5 +14,5 @@ jobs:
         with:
           # This is the token that is used to authenticate with the GitHub API
           # If BOT_TOKEN is not set, the default GITHUB_TOKEN is used
-          token: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN }}
 
