--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,16 @@ name: Continuous Integration
 
 on:
   workflow_dispatch:
-  # pull_request:
-  # push:
-  #   branches:
-  #     - main
-  #     - 'releases/*'
+  pull_request:
+  push:
+    branches:
+      - main
+      - 'releases/*'
 
 permissions:
   contents: read
 
-jobs:
+jobs:  
   test-typescript:
     name: TypeScript Tests
     runs-on: ubuntu-latest
@@ -55,25 +55,12 @@ jobs:
         id: npm-lint
         run: npm run lint
 
-      - name: Test
-        id: npm-ci-test
-        run: npm run ci-test
+      # TODO: Add tests
+      # - name: Test
+      #   id: npm-ci-test
+      #   run: npm run ci-test
 
   test-action:
-    name: GitHub Actions Test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Test Local Action
-        id: test-action
-        uses: ./
-        with:
-          milliseconds: 1000
-
-      - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+    uses: ./.github/workflows/test-action-workflow.yml
+    secrets: inherit
+    name: Github Action Tests
