--- a/.github/workflows/test-action-workflow.yml
+++ b/.github/workflows/test-action-workflow.yml
@@ -1,4 +1,4 @@
-name: Debug Action
+name: Test Github Action
 
 on:
   workflow_dispatch:
@@ -31,7 +31,7 @@ on:
         required: false
         type: string
         default: 'master,main'
-        
+
   pull_request:
     types: [opened, labeled, unlabeled, synchronize, ready_for_review, reopened]
   push:
@@ -48,7 +48,7 @@ jobs:
       - name: Debug Action
         uses: ./
         with:
-          github_token: ${{ secrets.BOT_TOKEN }}
+          github_token: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN || github.token }}
           pr_filter: ${{ github.event.inputs.pr_filter || 'all' }}
           pr_label: 'autoupdate'
           pr_ready_state: 'all'
