--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,12 +2,12 @@ name: Lint Code Base
 
 on:
   workflow_dispatch:
-  # pull_request:
-  #   branches:
-  #     - main
-  # push:
-  #   branches:
-  #     - main
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -57,3 +57,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TYPESCRIPT_DEFAULT_STYLE: prettier
           VALIDATE_JSCPD: false
+          # Exclude dist folder
+          FILTER_REGEX_EXCLUDE: .*dist/.*
