fix: label the PRs to be update as part of test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,3 +64,5 @@ jobs:
     uses: ./.github/workflows/test-action-workflow.yml
     secrets: inherit
     name: Github Action Tests
+    with:
+      pr_filter: 'labelled'
