--- a/.github/workflows/test-action-workflow.yml
+++ b/.github/workflows/test-action-workflow.yml
@@ -26,7 +26,7 @@ on:
         type: string
         default: 'test-autoupdate'
 
-      base_branchs:
+      base_branches:
         description: 'Base Branches'
         required: false
         type: string
@@ -44,12 +44,12 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN || github.token }}
-          pr_filter: ${{ github.event.inputs.pr_filter || 'all' }}
-          pr_label: 'test-autoupdate'
+          pr_filter: ${{ github.event.inputs.pr_filter || inputs.pr_filter || 'all' }}
+          pr_label: ${{ github.event.inputs.pr_label || inputs.pr_label || 'test-autoupdate' }}
           pr_ready_state: 'all'
           exclude_pr_label: ''
           merge_conflict_action: 'fail'
           merge_method: 'merge'
           merge_commit_message: ''
-          base_branches: ${{ github.event.inputs.base_branchs || 'master,main' }}
+          base_branches: ${{ inputs.base_branches || 'master,main' }}
           
