ci: fix linting error

--- a/.github/workflows/test-action-workflow.yml
+++ b/.github/workflows/test-action-workflow.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           github_token: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN || github.token }}
           pr_filter: ${{ github.event.inputs.pr_filter || inputs.pr_filter || 'all' }}
-          pr_label: ${{ github.event.inputs.pr_label || inputs.pr_label || 'test-autoupdate' }}
+          pr_label: ${{ inputs.pr_label || 'test-autoupdate' }}
           pr_ready_state: 'all'
           exclude_pr_label: ''
           merge_conflict_action: 'fail'
