--- a/package.json
+++ b/package.json
@@ -72,9 +72,11 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "@octokit/plugin-retry": "^6.0.1"
+    "@octokit/plugin-retry": "^6.0.1",
+    "graphql": "^16.8.1"
   },
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
